discussion/kv_engine/141092/141092_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove old memcached/3rd_party/folly/AtomicBitSet.h

Change-Id: I0a0551905dfd66a8be54e16cf28e2962a856a17a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-11-27 15:49:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-27 15:55:15.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32186/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\stored-value.h(27): fatal error C1083: Cannot open include file: "folly/AtomicBitSet.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32186/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27753/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/stored-value.h:27:10:
fatal error: "folly/AtomicBitSet.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27753/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5958/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/stored-value.h:27:10: error: "folly/AtomicBitSet.h" file not found [clang-diagnostic-error]
#include <folly/AtomicBitSet.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5958/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/stored-value.h:27:10:
error: "folly/AtomicBitSet.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5958/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6483/ : FAILURE

Compile error at [2020-11-27T15:50:50.558Z] ../kv_engine/engines/ep/src/stored-value.h:27:10:
fatal error: "folly/AtomicBitSet.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6483/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7517/ : FAILURE

Compile error at [2020-11-27T15:53:08.937Z] ../kv_engine/engines/ep/src/stored-value.h:27:10:
fatal error: folly/AtomicBitSet.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7798/ : FAILURE

Compile error at [2020-11-27T15:52:03.190Z] ../kv_engine/engines/ep/src/stored-value.h:27:10:
fatal error: "folly/AtomicBitSet.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7798/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7411/ : FAILURE

Compile error at [2020-11-27T15:50:57.747Z] ../kv_engine/engines/ep/src/stored-value.h:27:10:
fatal error: folly/AtomicBitSet.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7411/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15340/ : FAILURE

Compile error at [2020-11-27T15:53:53.358Z] ../kv_engine/engines/ep/src/stored-value.h:27:10:
fatal error: "folly/AtomicBitSet.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15340/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4492/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-11-27 16:01:27.000000000
Message: 
Patch Set 1: Code-Review-1

This won't work - we've customised it to make it smaller.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-11-27 16:28:40.000000000
Message: 
Patch Set 1:

> Patch Set 1: Code-Review-1
> 
> This won't work - we've customised it to make it smaller.

aha well least this explains why the our StoredValue gets bigger when moving to folly::ConcurrentBitSet<N> re:https://github.com/facebook/folly/commit/f296a1d04b5bd13bbfcce3fa7644ec3932454d62 

Was getting very confused 😮
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-11-27 16:44:33.000000000
Message: 
Abandoned

Not needed as per Dave R's comment
----------------------------------------------------------------------------------------------------------------------
